fix some z-index silliness with the compose pop-overs

--- a/app/assets/stylesheets/act.css.less
+++ b/app/assets/stylesheets/act.css.less
@@ -67,7 +67,7 @@
   background-color: #EEE;
   border-bottom:1px solid @wc-toolbar-border-color;
   padding:0 .5rem;
-  z-index: 3;
+  z-index: 1;
 
   &.editing{
     .editing-style();
